--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   },
   "devDependencies": {
     "vitepress": "^2.0.0-alpha.15"
+  },
+  "dependencies": {
+    "mermaid": "^11.12.2",
+    "vitepress-mermaid-renderer": "^1.1.6",
+    "vue": "^3.5.25"
   }
 }
